# todo_list_backend

./: .gitignore  README.md  dockerfile  pyproject.toml
core/: serializers.py  settings.py  urls.py  views.py
todos/: models.py  serializers.py  urls.py  views.py
todos/migrations/: 0001_initial.py
